--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <th scope="col">Title of activity</th>
         <th scope="col">Team leader</th>
         <th scope="col">Duration</th>
-        <th scope="col">List of collabarators</th>
+        <th scope="col">List of collaborators</th>
         <th scope="col">is finished</th>
       </tr>
     </thead>
