--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
-{% extends "base.html" %} {% block content %} {% for item in jobs %}
+{% extends "base.html" %} {% block content %}
+<h1>Список работ</h1>
+{% if current_user.is_authenticated %}
+<a href="jobs" class="btn btn-secondary">Добавить информацию о работе</a>
+{% endif %} {% for item in jobs %}
 <div class="col-md6 border rounded">
-  <br>
+  <br />
   <h2>Action #{{ item.id }}</h2>
   <table class="table">
     <thead>
@@ -22,5 +26,11 @@
       </tr>
     </tbody>
   </table>
+  {% if current_user.is_authenticated %}
+  <div>
+    <a href="/jobs/{{ item.id }}" class="btn btn-warning"> Изменить </a>
+    <a href="/jobs_delete/{{ item.id }}" class="btn btn-danger"> Удалить </a>
+  </div>
+  {% endif %}
 </div>
 {% endfor %} {% endblock %}
