--- a/templates/index.html
+++ b/templates/index.html
@@ -26,11 +26,15 @@
       </tr>
     </tbody>
   </table>
-  {% if current_user.is_authenticated %}
-  <div>
-    <a href="/jobs/{{ item.id }}" class="btn btn-warning"> Изменить </a>
-    <a href="/jobs_delete/{{ item.id }}" class="btn btn-danger"> Удалить </a>
-  </div>
-  {% endif %}
+  {% if current_user.is_authenticated and (current_user == item.user or current_user.id == 1) %}
+    <div>
+        <a href="/jobs/{{ item.id }}" class="btn btn-warning">
+            Изменить
+        </a>
+        <a href="/jobs_delete/{{ item.id }}" class="btn btn-danger">
+            Удалить
+        </a>
+    </div>
+{% endif %}
 </div>
 {% endfor %} {% endblock %}
